--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Log in to registry
         uses: docker/login-action@v2
         with:
-          registry: registry.null.care
+          registry: rpi2.null.care
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
@@ -46,6 +46,7 @@ jobs:
           
   # Deploy to kubernetes        
   deploy:
+    needs: push_to_registry
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -54,4 +55,4 @@ jobs:
         env:
           KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
         with:
-          args: apply deploy/deployment.yml
+          args: apply -f deploy/deployment.yml
