--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -7,19 +7,13 @@ jobs:
 # Build and push the docker image
   push_to_registry:
     name: Push Docker image to registry
-    runs-on: ubuntu-latest
+    runs-on: ARM64
     permissions:
       packages: write
       contents: read
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
 
       - name: Log in to registry
         uses: docker/login-action@v2
@@ -39,20 +33,15 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          platforms: linux/arm64
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: |
+            rpi2.null.care/knbn-ui:latest
           
   # Deploy to kubernetes        
   deploy:
     needs: push_to_registry
-    runs-on: ubuntu-latest
+    runs-on: ARM64
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: kubectl apply
-        uses: Consensys/kubernetes-action@master
-        env:
-          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
-        with:
-          args: apply -f deploy/deployment.yml
+        run: kubernetes-rollout
