--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -8,14 +8,5 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: List Runners
-        id: runners
-        run: |
-          runners=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-          -H "Accept: application/vnd.github.v3+json" \
-          "https://api.github.com/repos/${{ github.repository }}/actions/runners")
-
-          echo "::set-output name=runners::${runners}"
-
       - name: Display Runners
-        run: echo "${{ steps.runners.outputs.runners }}"
+        run: echo "${{ github.runners }}"
