--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -1,12 +1,26 @@
-name: Check Self-hosted Runners
+name: Check self-hosted runner
 
 on:
   workflow_dispatch:
 
 jobs:
   check-runners:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
-      - name: Display Runners
-        run: echo "${{ github.runners }}"
+      - name: Exists
+        run: echo "self-hosted runner exists"
+
+  deploy-runner:
+        if: failure()
+        needs: check-runners
+        runs-on: ubuntu-latest
+        permissions:
+          packages: write
+          contents: read
+        steps:
+          - name: Check out the repo
+            uses: actions/checkout@v3
+          
+          - name: Deploy self-hosted runner 
+            run: echo "deploying self-hosted runner"
