--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v3
       
       - name: Replace tokens
-      - uses: cschleiden/replace-tokens@v1
+        uses: cschleiden/replace-tokens@v1
         with:
           files: '["**/runner.yml"]'
         env:
