--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -24,4 +24,4 @@ jobs:
         env:
           KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
         with:
-          args: apply deploy/runner.yml
+          args: apply -f deploy/runner.yml
