--- a/deploy/runner.yml
+++ b/deploy/runner.yml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: github-runner-knbn-ui
+  name: github-runner-#{RUNNER_NAME}#
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: github-runner-knbn-ui
+      app: github-runner-#{RUNNER_NAME}#
   template:
     metadata:
       labels:
-        app: github-runner-knbn-ui
+        app: github-runner-#{RUNNER_NAME}#
     spec:
       serviceAccountName: deployment-manager
       containers:
-        - name: github-runner-knbn-ui
+        - name: github-runner-#{RUNNER_NAME}#
           image: mioherman/github-runner:arm64
           volumeMounts:
             - name: docker-sock
