--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -18,7 +18,8 @@ jobs:
           files: '["**/runner.yml"]'
         env:
           REPO_URL: https://github.com/${{ github.repository }}
-          RUNNER_NAME: ${{ github.run_id }}
+          RUNNER_NAME: ${{ github.repository }}
+          RUN_ID: ${{ github.run_id }}
           ACCESS_TOKEN: ${{ secrets.RUNNER_ACCESS_TOKEN }}
 
       - name: Trigger deploy
