--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -68,7 +68,9 @@ jobs:
     needs: push_to_registry
     runs-on: self-hosted
     steps:
-      - uses: actions/checkout@v3
+      - name: Check out the repo
+        uses: actions/checkout@v3
+
       - name: kubectl apply
         run: kubernetes-rollout
 
@@ -82,4 +84,4 @@ jobs:
         env:
           KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
         with:
-          args: delete deployment/github-runner-${{ github.run_id }}
+          args: delete deployment/gh-runner-${{ github.run_id }}
