--- a/deploy/runner.yml
+++ b/deploy/runner.yml
@@ -26,7 +26,7 @@ spec:
             - name: REPO_URL
               value: #{REPO_URL}#
             - name: RUNNER_NAME
-              value: #{RUNNER_NAME}#-arm64
+              value: arm64
             - name: ACCESS_TOKEN
               value: #{ACCESS_TOKEN}#
       volumes:
