--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@floating-ui/dom": "^1.5.1",
 		"@popperjs/core": "^2.11.8",
 		"@sveltejs/adapter-node": "^1.2.4",
 		"flowbite": "^1.6.6",
 		"flowbite-svelte": "^0.38.5",
 		"svelte-collapse": "^0.1.2",
+		"svelte-qrcode-image": "^1.0.0-rc.2",
 		"tailwind-merge": "^1.13.2"
 	}
 }
