--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
 		"autoprefixer": "^10.4.14",
+		"flowbite-svelte-icons": "^0.3.6",
 		"postcss": "^8.4.24",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
