--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
 		"autoprefixer": "^10.4.14",
+		"flowbite-svelte-icons": "^0.3.6",
 		"postcss": "^8.4.24",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
@@ -25,11 +26,13 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@floating-ui/dom": "^1.5.1",
 		"@popperjs/core": "^2.11.8",
 		"@sveltejs/adapter-node": "^1.2.4",
 		"flowbite": "^1.6.6",
 		"flowbite-svelte": "^0.38.5",
 		"svelte-collapse": "^0.1.2",
+		"svelte-qrcode-image": "^1.0.0-rc.2",
 		"tailwind-merge": "^1.13.2"
 	}
 }
