--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@skeletonlabs/skeleton": "^1.8.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
+		"@types/dompurify": "^3.0.2",
 		"autoprefixer": "^10.4.14",
 		"flowbite-svelte-icons": "^0.3.6",
 		"postcss": "^8.4.24",
@@ -29,6 +30,7 @@
 		"@floating-ui/dom": "^1.5.1",
 		"@popperjs/core": "^2.11.8",
 		"@sveltejs/adapter-node": "^1.2.4",
+		"dompurify": "^3.0.5",
 		"flowbite": "^1.6.6",
 		"flowbite-svelte": "^0.38.5",
 		"svelte-collapse": "^0.1.2",
